2004-08-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SmtpClient.cs: multipart mails default body format is now the same as
	the one used for single part mails instead of being forced to
	"text/plain".

2004-02-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MailMessage.cs: patch by John Luke that initialized the fields in
	the message and makes Fields return the same as in MS.NET. Fixes bug
	#54908.

2003-12-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MailMessage.cs: added Fields property.

2003-11-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MailMessageWrapper.cs: fixed typo that made all messages be sent as
	html, even when the body is marked as text. Path by Mohammad DAMT.
	Closes bug #51177.

2003-07-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MailAddress.cs: return null instead of exception when the address is
	empty.
	
	* MailAddressCollection.cs: ignore null addresses.
	* SmtpMail.cs: add the exception we get as inner exception so we know
	where the error is.

	Fixes bug #45746.

2003-03-24  Per Arneng <pt99par@student.bth.se>
	* MailUtil: Added for some functions that didnt fit in other classes
	
2003-03-06  Per Arneng <pt99par@student.bth.se>
	* MailMessageWrapper: Added to get at more advanced mail message
	
2003-02-23  Per Arneng <pt99par@student.bth.se>

	* SmtpMail.cs: Send method now implemented (needs testing)
	* SmtpClient.cs: Added to make Send work (internal class)
	* SmtpException.cs: Added to make Send work (internal class)
	* SmtpStream.cs: Added to make Send work (internal class)
	* SmtpResponse.cs: Added to make Send work (internal class)
	
2002-11-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SmtpMail.cs: i don't wanna see that warning :-).

2002-04-26  Lawrence Pit <loz@cable.a2000.nl>

	* MailAttachment.cs: Implemented
	* MailEncoding.cs: Implemented
	* MailFormat.cs: Implemented
	* MailMessage.cs: Implemented
	* MailPriority.cs: Implemented
	* SmtpMail.cs: Stubbed